optional - exceptions - Lombok - Date